opacity products list while pending

--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -7,7 +7,7 @@
     },
     "Catalog": {
         "menuTitle": "Каталог",
-        "pendingMessage": "Получаем товары. Пожалуйста подождите..."
+        "pendingMessage": "Получаем товары..."
     },
     "Product": {
         "Price": "Цена",
