Popup translation implemented via ng2-translate

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,6 +24,9 @@
         "Checkout": "Checkout",
         "catalogLink": "Go to Catalog"
     },
+    "AlertMsg": {
+        "notImplemented": "This functionality is not implemented..."
+    },
     "Lang": {
         "currentLang": "English"
     }
