--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -24,6 +24,9 @@
         "Checkout": "Оформить заказ",
         "catalogLink": "Перейти в каталог"
     },
+    "AlertMsg": {
+        "notImplemented": "Эта функция не реализована..."
+    },
     "Lang": {
         "currentLang": "Русский"
     }
